DTCS-1 #time 10m #comment Removed and altered some code that was not fitting the coding standard, and generally cleaned up a few areas.Then changed the formatting on the CharHeaderInfoDiv to fix some weird panel padding issues.

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -19,6 +19,12 @@
 	padding: 0px;
 }
 
+#CharHeaderInfoDiv{
+	background-color: #e6e6e6;
+	padding: 1%;
+	border: 1px solid black;
+}
+
 /*
 .col-md-4
 {
